Update converter package properties and readme

--- a/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
+++ b/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
@@ -10,7 +10,12 @@
       Extension for YoutubeExplode that provides an interface to download and convert videos using FFmpeg
     </Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageProjectUrl>https://github.com/Tyrrrz/YoutubeExplode/tree/master/YoutubeExplode.Converter</PackageProjectUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="Readme.md" Pack="true" PackagePath="" Visible="false" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.6.0" />
