--- a/YoutubeExplode.Tests/YoutubeExplode.Tests.csproj
+++ b/YoutubeExplode.Tests/YoutubeExplode.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworks>net48;net7.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,12 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.0" PrivateAssets="all" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="GitHubActionsTestLogger" Version="2.3.2" PrivateAssets="all" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
+    <PackageReference Include="PolyShim" Version="1.5.0" PrivateAssets="all" />
     <PackageReference Include="xunit" Version="2.5.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0" PrivateAssets="all" />
-    <PackageReference Include="coverlet.collector" Version="6.0.0" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
