--- a/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
+++ b/YoutubeExplode.Converter/YoutubeExplode.Converter.csproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Description>
-      Extension for YoutubeExplode that provides an interface to download and convert videos using FFmpeg
-    </Description>
+    <Description>Extension for YoutubeExplode that provides an interface to download and convert videos using FFmpeg</Description>
     <PackageProjectUrl>https://github.com/Tyrrrz/YoutubeExplode/tree/master/YoutubeExplode.Converter</PackageProjectUrl>
     <PackageIcon>favicon.png</PackageIcon>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
