--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     with:
       windows-only: true
       deploy: ${{ inputs.deploy || github.ref_type == 'tag' }}
-      package-version: ${{ inputs.package-version }}
+      package-version: ${{ inputs.package-version || (github.ref_type == 'tag' && github.ref_name) || '0.0.0' }}
       dotnet-version: 8.0.x
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
