--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,11 @@ on:
   schedule:
     - cron: "0 0 * * *"
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
 
 jobs:
   main:
