--- a/YoutubeExplode.Demo.Gui/YoutubeExplode.Demo.Gui.csproj
+++ b/YoutubeExplode.Demo.Gui/YoutubeExplode.Demo.Gui.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Avalonia" Version="11.0.10" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
     <PackageReference Include="Avalonia.Diagnostics" Version="11.0.10" Condition="'$(Configuration)' == 'Debug'" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="CSharpier.MsBuild" Version="0.27.3" PrivateAssets="all" />
     <PackageReference Include="Material.Avalonia" Version="3.4.2" />
     <PackageReference Include="Material.Icons.Avalonia" Version="2.1.0" />
