Use compile-time bindings in Avalonia

--- a/YoutubeExplode.Demo.Gui/YoutubeExplode.Demo.Gui.csproj
+++ b/YoutubeExplode.Demo.Gui/YoutubeExplode.Demo.Gui.csproj
@@ -7,6 +7,11 @@
     <ApplicationIcon>..\favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <!-- Avalonia-related settings -->
+  <PropertyGroup>
+    <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+  </PropertyGroup>
+  
   <ItemGroup>
     <AvaloniaResource Include="..\favicon.ico" Link="favicon.ico" />
   </ItemGroup>
