Always skip tests on CI for the time being

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,6 @@ on:
         type: string
         description: Package version
         required: false
-      skip-tests:
-        type: boolean
-        description: Skip tests
-        required: false
-        default: false
       deploy:
         type: boolean
         description: Deploy package
@@ -32,7 +27,9 @@ jobs:
   main:
     uses: Tyrrrz/.github/.github/workflows/nuget.yml@master
     with:
-      skip-tests: ${{ inputs.skip-tests || false }}
+      # CI tests currently don't work due to YouTube's anti-bot measures
+      # https://github.com/Tyrrrz/YoutubeExplode/issues/794
+      skip-tests: true
       deploy: ${{ inputs.deploy || github.ref_type == 'tag' }}
       package-version: ${{ inputs.package-version || (github.ref_type == 'tag' && github.ref_name) || format('0.0.0-ci-{0}', github.sha) }}
       dotnet-version: 8.0.x
