--- a/YoutubeExplode.Demo.Cli/YoutubeExplode.Demo.Cli.csproj
+++ b/YoutubeExplode.Demo.Cli/YoutubeExplode.Demo.Cli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSharpier.MsBuild" Version="1.0.1" PrivateAssets="all" />
+    <PackageReference Include="CSharpier.MsBuild" Version="0.30.6" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
