--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -26,19 +26,19 @@
     <PackageReference
       Include="Microsoft.Bcl.AsyncInterfaces"
       Version="9.0.1"
-      Condition="'$(TargetFramework)' == 'netstandard2.0'"
+      Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'netstandard2.1'))"
     />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="all" />
     <PackageReference Include="PolyShim" Version="1.15.0" PrivateAssets="all" />
     <PackageReference
       Include="System.Text.Json"
       Version="9.0.1"
-      Condition="'$(TargetFramework)' == 'netstandard2.0'"
+      Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'netcoreapp3.0'))"
     />
     <PackageReference
       Include="System.Threading.Tasks.Extensions"
       Version="4.6.0"
-      Condition="'$(TargetFramework)' == 'netstandard2.0'"
+      Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'netstandard2.1'))"
     />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
